# 3D-Model-Optimizer

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh  build_windows.bat  fetch_deps.py  run.sh  setup.sh  setup_windows.bat
src/: app.cpp  app.h  main.cpp  mesh_optimizer.cpp  mesh_optimizer.h  renderer.cpp  renderer.h  types.h  ui_theme.cpp  ui_theme.h  windows_main.cpp
src/glad/: glad.c  glad.h
src/glad/KHR/: khrplatform.h
